--- a/1-basic-implementation/src/main/res/layout/line_item.xml
+++ b/1-basic-implementation/src/main/res/layout/line_item.xml
@@ -7,12 +7,37 @@
     android:layout_margin="4dp">
 
     <TextView
-        android:id="@+id/text_item"
-        android:layout_width="0dp"
+        android:id="@+id/recipe_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="20sp"
+        tools:text="Cake"/>
+
+    <TextView
+        android:id="@+id/recipe_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/recipe_name"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:text="description"/>
+
+    <TextView
+        android:id="@+id/recipe_owner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/recipe_description"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textStyle="bold"
+        tools:text="Me and only me"/>
+
+    <ImageButton
+        android:id="@+id/recipe_is_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@android:drawable/btn_star"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
