RecyclerView Lesson 4 - working with images

--- a/1-basic-implementation/src/main/res/layout/line_item.xml
+++ b/1-basic-implementation/src/main/res/layout/line_item.xml
@@ -6,12 +6,20 @@
     android:layout_height="wrap_content"
     android:layout_margin="4dp">
 
+    <ImageView
+        android:id="@+id/recipe_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/recipe_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/recipe_image"
         android:textSize="20sp"
         tools:text="Cake"/>
 
@@ -20,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/recipe_name"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/recipe_image"
         tools:text="description"/>
 
     <TextView
@@ -28,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/recipe_description"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/recipe_image"
         android:textStyle="bold"
         tools:text="Me and only me"/>
 
